--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
@@ -19,14 +20,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint": "8.40.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^14.2.3",
     "framer-motion": "^10.12.10",
     "lucide-react": "^0.331.0",
-    "next": "^14.1.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.32.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.2",
